[gd_scene load_steps=2 format=3 uid="uid://blejtq8ghcntx"]

[ext_resource type="Script" path="res://scripts/settings.gd" id="1_xnn61"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xnn61")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.231373, 0.231373, 0.231373, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 25.0
offset_top = 164.0
offset_right = 215.0
offset_bottom = 314.0
grow_vertical = 2

[node name="audio" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "AUDIO"

[node name="resolution" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "RESOLUTION"

[node name="controls" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CONTROLES"

[node name="audio" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -872.0
offset_top = -327.0
offset_bottom = 259.0
grow_horizontal = 0
grow_vertical = 2

[node name="HSlider" type="HSlider" parent="audio"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -86.0
offset_right = 554.0
offset_bottom = -70.0
grow_vertical = 2

[node name="Label" type="Label" parent="audio"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -216.5
offset_top = 10.0
offset_right = -55.5
offset_bottom = 79.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "AUDIO"

[node name="CheckButton" type="CheckButton" parent="audio"]
layout_mode = 0
offset_left = 16.0
offset_top = 232.0
offset_right = 166.0
offset_bottom = 263.0
text = "PLEIN ECRAN"

[node name="resolution" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -872.0
offset_top = -327.0
offset_bottom = 268.0
grow_horizontal = 0
grow_vertical = 2

[node name="OptionButton" type="OptionButton" parent="resolution"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -10.0
offset_right = 32.0
offset_bottom = 10.0
grow_vertical = 2
item_count = 2
popup/item_0/text = "1152x648"
popup/item_1/text = "800x500"
popup/item_1/id = 2

[node name="Label" type="Label" parent="resolution"]
layout_mode = 0
offset_left = 128.0
offset_top = 8.0
offset_right = 441.0
offset_bottom = 77.0
theme_override_font_sizes/font_size = 50
text = "RESOLUTION
"

[node name="Controls" type="Control" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -881.0
offset_top = -324.0
offset_bottom = 266.0
grow_horizontal = 0
grow_vertical = 2

[node name="Label" type="Label" parent="Controls"]
layout_mode = 0
offset_left = 146.0
offset_top = 6.0
offset_right = 438.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 50
text = "CONTROLES"

[node name="Label3" type="Label" parent="Controls"]
layout_mode = 0
offset_left = -2.0
offset_top = 101.0
offset_right = 159.0
offset_bottom = 143.0
theme_override_font_sizes/font_size = 30
text = "Ordinateur"

[node name="Label4" type="Label" parent="Controls"]
layout_mode = 0
offset_left = 271.0
offset_top = 101.0
offset_right = 407.0
offset_bottom = 143.0
theme_override_font_sizes/font_size = 30
text = "PS5/Xbox"

[node name="Label6" type="Label" parent="Controls"]
layout_mode = 0
offset_left = 543.0
offset_top = 101.0
offset_right = 642.0
offset_bottom = 143.0
theme_override_font_sizes/font_size = 30
text = "Mobile"

[node name="Label2" type="Label" parent="Controls"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 138.0
offset_right = -713.0
offset_bottom = -238.0
theme_override_font_sizes/font_size = 20
text = "Avancer: Z
Reculer: S
Droite: D
Gauche: Q
Accélérer: R
S'acroupire: Shift
S'alonger: Ctrl"

[node name="Label5" type="Label" parent="Controls"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 273.0
offset_top = 138.0
offset_right = -443.0
offset_bottom = -238.0
theme_override_font_sizes/font_size = 20
text = "Avancer: Z
Reculer: S
Droite: D
Gauche: Q
Accélérer: R
S'acroupire: Shift
S'alonger: Ctrl"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -87.0
offset_top = -39.0
offset_right = -16.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
text = "RETOUR"

[connection signal="pressed" from="VBoxContainer/audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="VBoxContainer/resolution" to="." method="_on_resolution_pressed"]
[connection signal="pressed" from="VBoxContainer/controls" to="." method="_on_controls_pressed"]
[connection signal="value_changed" from="audio/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="toggled" from="audio/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="item_selected" from="resolution/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
